--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -11,19 +11,19 @@ body {
   color: #222222;
   background-color: #f2f2f0;
   background-color: #5b72ac;
-  background-image: url("../images/cover.png");
+  background-image: url('../images/cover.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  padding: 20px;
   overflow-x: hidden;
 }
 
 body,
 input,
 button {
-  font-family: 'Muli', sans-serif, -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: 'Muli', sans-serif, -apple-system, BlinkMacSystemFont,
+    'Helvetica Neue', Helvetica, sans-serif;
   outline: none;
 }
 
@@ -43,10 +43,10 @@ a:hover {
 }
 
 .form-container {
-    margin: auto;
-    
-    border: 3px solid #73AD21;
-    padding: 10px;
+  margin: auto;
+
+  border: 3px solid #73ad21;
+  padding: 10px;
 }
 
 .form-body {
@@ -55,7 +55,8 @@ a:hover {
   padding: 50px;
   color: #ffffff;
   border-radius: 3px;
-  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
 @media only screen and (max-width: 500px) {
@@ -106,7 +107,7 @@ a:hover {
   color: #e6e6e6;
   font-weight: bold;
   text-decoration: none;
-  transition: background-color .3s;
+  transition: background-color 0.3s;
 }
 
 .social-login ul li a::before {
@@ -122,7 +123,8 @@ a:hover {
 .social-login ul li a:hover {
   background-color: #f4f4f4;
   color: #0e090e;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
 li.google {
@@ -130,7 +132,7 @@ li.google {
 }
 
 li.google a::before {
-  background-image: url("../images/google.png");
+  background-image: url('../images/google.png');
 }
 
 li.fb {
@@ -139,7 +141,7 @@ li.fb {
 
 li.fb a::before {
   margin: 0;
-  background-image: url("../images/fb.png");
+  background-image: url('../images/fb.png');
 }
 
 @media only screen and (max-width: 400px) {
@@ -175,42 +177,42 @@ li.fb a::before {
   font-weight: bold;
 }
 
-.the-form [type="email"],
-.the-form [type="password"] {
+.the-form [type='email'],
+.the-form [type='password'] {
   padding: 15px;
   font-size: 16px;
   background: rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 3px;
   margin-bottom: 15px;
-  transition: background .3s;
+  transition: background 0.3s;
   color: #e6e6e6;
 }
 
-.the-form [type="email"]::placeholder,
-.the-form [type="password"]::placeholder {
+.the-form [type='email']::placeholder,
+.the-form [type='password']::placeholder {
   color: rgba(255, 255, 255, 0.3);
 }
 
-.the-form [type="email"]:hover,
-.the-form [type="password"]:hover {
+.the-form [type='email']:hover,
+.the-form [type='password']:hover {
   background: rgba(0, 0, 0, 0.1);
 }
 
-.the-form [type="email"]:focus,
-.the-form [type="password"]:focus {
+.the-form [type='email']:focus,
+.the-form [type='password']:focus {
   background: #ffffff;
   box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
   border-color: #4a304d;
   color: #222222;
 }
 
-.the-form [type="email"]:focus::placeholder,
-.the-form [type="password"]:focus::placeholder {
+.the-form [type='email']:focus::placeholder,
+.the-form [type='password']:focus::placeholder {
   color: #666666;
 }
 
-.the-form [type="submit"] {
+.the-form [type='submit'] {
   background: #ffb37b;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 18px;
@@ -219,11 +221,12 @@ li.fb a::before {
   cursor: pointer;
   margin-top: 20px;
   color: black;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
-.the-form [type="submit"]:hover {
-  opacity: .9;
+.the-form [type='submit']:hover {
+  opacity: 0.9;
 }
 
 .form-footer div {
